--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,8 +32,8 @@
                     <li><a href="about.html">History</a></li>
                     <li><a href="about.html">Team</a></li>
                   </ul>
-
                 </li>
+                <%= link_to "Sign Up", signup_path, class: "btn btn-lg btn-primary" %>
               </ul>
             </div>
 
