--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,4 @@
 <h1><%= @article.title %></h1>
 <p><%= @article.body %></p>
-<%= link_to "edit",edit_article_path%>
+<%= link_to "edit",edit_article_path%> g
 <%= link_to "<< Back to Articles List", articles_path %>
