--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -6,7 +6,10 @@
         <li><%= link_to "Home", root_path %></li>
         <li><%= link_to "Blog", articles_path %></li>
         <% if logged_in? %>
-            <li><%= link_to "Users", users_path %></li>
+            <% if admin?%>
+                <li><%= link_to "Users", users_path %></li>
+            <% end%>
+
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 Account <b class="caret"></b>
