--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,10 +1,42 @@
 <% provide(:title, 'All users') %>
 <h1>All users</h1>
 
-<%= will_paginate %>
+<%= form_tag(users_path, :method => "get", class: "navbar-form", align: "right",id: "search-form") do %>
+    <div class="input-append">
+      <%= text_field_tag :search, params[:search], class: "searchbox", placeholder: "Search Articles" %>
+      <!-- In order to have the "search" icon int the button, we need to use plain HTML instead
+           of using a Rails form helper -->
+      <%= button_to "Seach", users_path, method: :get,  class: "btn btn-success btn-sm searchbutton" %>
+      <%= select_tag :type ,options_for_select([ "All", "Admin", "Non Admin" ], params[:type]),:method => "get", :class => 'selectbox' %>
+    </div>
+<% end %>
 
-<ul class="users">
-  <%= render @users %>
-</ul>
+<table class="table table-bordered">
+  <thead>
+  <tr>
+    <th>Name</th>
+    <th>Email</th>
+    <th>admin</th>
+    <th>create date</th>
+    <th>Actions</th>
+  </tr>
+  </thead>
+  <tbody>
+  <% @users.each do |user| %>
+      <tr>
+        <td><%=link_to user.name ,user_path(user) %></td>
+        <td><%= user.email %></td>
+        <% if user.admin? %>
+            <td><%= button_to "Admin", makenonadmin_user_path(user), method: :get, data: {confirm: "You sure?"}, class: "btn btn-success btn-sm" %>
+        <% else %>
+            <td><%= button_to "Make", makeadmin_user_path(user), method: :get, data: {confirm: "You sure?"}, class: "btn btn-info btn-sm" %>
+        <% end %>
+        <td><%= user.created_at.strftime("%D") %></td>
+        <td><%= button_to "delete", user, method: :delete, data: {confirm: "You sure?"}, class: "btn btn-danger btn-sm" %>
+        </td>
+      </tr>
+  <% end %>
+  </tbody>
+</table>
 
-<%= will_paginate %>
+
