account activation done by gmail

--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -1,9 +1,9 @@
-<h1>Sample App</h1>
+<h1>Team DailyTechDiscuss</h1>
 
 <p>Hi <%= @user.name %>,</p>
 
 <p>
-  Welcome to the Sample App! Click on the link below to activate your account:
+  Welcome to the DailyTechDiscuss.com! Click on the link below to activate your account:
 </p>
 
 <%= link_to "Activate", edit_account_activation_url(@user.activation_token,email: @user.email) %>
