--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,9 +1,11 @@
-<h1>Password reset</h1>
+<h1>DailyTechDiscuss</h1>
+<h2>Password reset</h2>
 
 <p>To reset your password click the link below:</p>
 
-<%= link_to "Reset password", edit_password_reset_url(@user.reset_token,
-                                                      email: @user.email) %>
+
+
+<%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
 
 <p>This link will expire in two hours.</p>
 
